# oresat-live-software

./: .gitignore  README.md
camera/: CMakeLists.txt  README.md  camera.py  capture.c  imagecapture  imagecapture.c  transfer.sh
encoding/: README.md  encode.sh
server/: README.md  build-deb.sh  cron-clean-videos  index.html  index.js  install-node-npm.sh  oresat-live-software-rx.service  oresat-live-software-server-service.sh  oresat-live-software-server.service  package-lock.json  package.json  rx.sh  startmonitor  videoplayer.js
server/public/: happy.mov  index.html  videoplayer.js
server/public/css/: style.css
server/public/testimages/: one.mov  three.mov
server/testimages/: four.mov  two.mov
